--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cra-template": "1.2.0",
     "gantt-task-react": "^0.3.9",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.474.0",
