--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
